--- a/css/giaoDienChinh.css
+++ b/css/giaoDienChinh.css
@@ -14,7 +14,7 @@
     height: 50px;
     background-color: #4d2f2a;
     align-items: center;
-    border-bottom: 1px solid #fafafa;
+    border-bottom: 1px solid #ffffff;
 }
 
 .container_item_MenuChinh {
@@ -27,8 +27,8 @@
 }
 
 .container_item_MenuChinh div {
-    width: 150px;
-    font-size: 30px;
+    width: 220px;
+    font-size: 20px;
 }
 
 #item_MenuChinh {
@@ -41,8 +41,8 @@
 }
 
 #btn-gioHang {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-left: 10px;
     margin-top: 5px;
 }
@@ -51,7 +51,27 @@
     display: flex;
     width: 100%;
     height: 50px;
+    align-items: center;
 }
+
+.gioHang p {
+    color: #ffffff;
+    margin-left: 10px;
+    margin-top: 10px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+.container-header {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100000;
+}
+
+
+/* ------------------logo,, search and hotline-------------------------- */
 
 .under-header {
     width: 100%;
@@ -89,6 +109,9 @@
     color: #ffffff;
 }
 
+
+/* --------------------sub-menu -------------------------*/
+
 .menu-1 {
     display: block;
     position: absolute;
@@ -96,6 +119,7 @@
     height: 50px;
     background-color: #4a292d;
     align-items: center;
+    z-index: 1000000;
 }
 
 .menu-1-container ul {
@@ -117,9 +141,9 @@
 
 .menu-1-container ul li div {
     display: none;
-    position: absolute;
+    position: static;
     width: 150px;
-    background-color: #4a292d;
+    background-color: rgba(75, 42, 42, 0.5);
     margin-left: 50px;
 }
 
@@ -127,20 +151,62 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-left: 10px;
 }
 
 .menu-1 li div ul li {
     font-size: 15px;
     border-bottom: 2px solid #f9f8f8;
+    margin-top: 10px;
 }
 
 .menu-1 li:hover div {
     display: block;
     position: absolute;
-    height: 150px;
+    height: 250px;
     width: 250px;
     margin-left: -10px;
+    /* margin-top: 10px; */
     overflow: hidden;
 }
+
+
+/* ---------------carousel------------------- */
+
+#myCarousel {
+    margin-top: 250px;
+}
+
+
+/* caption Sản phẩm */
+
+.tab-caption {
+    display: flex;
+    /* justify-content: space-around; */
+    align-items: center;
+    margin: 100px;
+    width: 100%;
+    height: 50px;
+}
+
+.text {
+    display: block;
+    width: 150px;
+}
+
+
+/* .headtitle {
+    text-transform: uppercase;
+    padding: 0 5px;
+    line-height: 18px;
+    cursor: pointer;
+    line-height: 1.7;
+    border-right: 1px solid #2c2c2c;
+    font-size: 30px;
+    font: inherit;
+    vertical-align: baseline;
+    font-weight: bold;
+    width: 210px;
+    height: 30spx;
+} */
