--- a/css/giaoDienChinh.css
+++ b/css/giaoDienChinh.css
@@ -18,7 +18,6 @@
 }
 
 .container_item_MenuChinh {
-    width: 100%;
     height: 50px;
     display: flex;
     justify-content: space-around;
@@ -27,7 +26,7 @@
 }
 
 .container_item_MenuChinh div {
-    width: 220px;
+    width: 160px;
     font-size: 20px;
 }
 
@@ -47,27 +46,25 @@
     margin-top: 5px;
 }
 
-.gioHang {
-    display: flex;
-    width: 100%;
-    height: 50px;
-    align-items: center;
-}
-
-.gioHang p {
+.gioHang a {
     color: #ffffff;
     margin-left: 10px;
     margin-top: 10px;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 15px;
+    display: flex;
+    width: 150px;
+    height: 50px;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.gioHang a img {
+    margin: auto;
 }
 
 .container-header {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100000;
+    position: relative;
 }
 
 
@@ -111,6 +108,20 @@
 
 
 /* --------------------sub-menu -------------------------*/
+
+
+/* làm .menu-1-container cố định khi croll chuột */
+
+
+/* .menu-1-container {
+    position: fixed;
+    top: auto;
+    width: 100%;
+    height: 50px;
+    background-color: #4a292d;
+    align-items: center;
+    z-index: 1000000;
+} */
 
 .menu-1 {
     display: block;
@@ -168,45 +179,246 @@
     width: 250px;
     margin-left: -10px;
     /* margin-top: 10px; */
-    overflow: hidden;
 }
 
 
 /* ---------------carousel------------------- */
 
 #myCarousel {
-    margin-top: 250px;
+    margin-top: 50px;
 }
 
-
-/* caption Sản phẩm */
-
-.tab-caption {
-    display: flex;
-    /* justify-content: space-around; */
-    align-items: center;
-    margin: 100px;
+carousel-inner img {
     width: 100%;
-    height: 50px;
-}
-
-.text {
-    display: block;
-    width: 150px;
+    height: 100%;
 }
 
 
-/* .headtitle {
+/*  Sản phẩm */
+
+
+/* tiêu đề */
+
+#tieude {
     text-transform: uppercase;
-    padding: 0 5px;
-    line-height: 18px;
-    cursor: pointer;
-    line-height: 1.7;
-    border-right: 1px solid #2c2c2c;
-    font-size: 30px;
-    font: inherit;
-    vertical-align: baseline;
+    font-size: 15px;
+    margin-top: 20px;
+    margin: 20px auto auto auto;
+    width: 180px;
+}
+
+#container-tieude {
+    width: 90%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin: auto;
+    border-bottom: 3px solid #000000;
+}
+
+#tieuDeSPMoi {
+    width: 90%;
+    height: 20px;
+    margin: auto;
+}
+
+
+/* hình ảnh */
+
+#hinhanhSPMoi {
+    width: 90%;
+    height: 100%;
+    margin-top: 30px;
+    margin-left: 70px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#hinhanhSPMoi a {
+    text-decoration: none;
+}
+
+#SPMoi {
+    margin-top: 10px;
+    padding: 5px;
+    border: 1px solid #a0a0a0;
+    width: 260px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#tenSPMoi {
+    font-size: 20px;
+    text-transform: uppercase;
     font-weight: bold;
-    width: 210px;
-    height: 30spx;
-} */
+    color: #3c3c3c;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#giaSPMoi {
+    font-size: 20px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #cc8181;
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+/* sản phẩm phòng khách, PHÒNG NGỦ, PHÒNG BẾP   */
+
+
+/* tiêu đề */
+
+#sanphamPhongKhach,
+#sanphamPhongNgu,
+#sanphamPhongBep {
+    margin-top: 25px;
+}
+
+#tieudePhongKhach,
+#tieudePhongNgu,
+#tieudePhongBep {
+    width: 100%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 3px solid #000000;
+}
+
+#hinhanhSPPhongKhach,
+#hinhanhSPPhongNgu,
+#hinhanhSPPhongBep {
+    margin-top: -20px;
+}
+
+#loaiSP {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-right: -10px;
+    height: 30px;
+}
+
+#loaiSP a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 15px;
+    margin-right: 5px;
+    border-right: 1px solid #000000;
+    padding-right: 10px;
+}
+
+
+/* hình ảnh sản phẩm  */
+
+#SPPhongKhach-top,
+#SPPhongKhach-bottom,
+#SPPhongNgu-top,
+#SPPhongngu-bottom,
+#SPPhongBep-top,
+#SPPhongBep-bottom {
+    width: 100%;
+    height: 100%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+#SPPhongKhach,
+#SPPhongngu,
+#SPPhongBep {
+    margin-top: 10px;
+    padding: 5px;
+    border: 1px solid #a0a0a0;
+    width: 260px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#SPPhongKhach a,
+#SPPhongngu a,
+#SPPhongBep a {
+    text-decoration: none;
+}
+
+#tenSPPhongKhach,
+#tenSPPhongngu,
+#tenSPPhongBep {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #3c3c3c;
+    text-align: center;
+    margin-top: 10px;
+}
+
+#giaSPPhongKhach,
+#giaSPPhongngu,
+#giaSPPhongBep {
+    font-size: 15px;
+    font-weight: bold;
+    color: #cc8181;
+    text-align: center;
+    margin-top: 10px;
+}
+
+
+/* dự án tiêu biểu, tin tức */
+
+#duantieubieu,
+#tintuc {
+    height: 200px;
+    margin-top: 30px;
+}
+
+#duan,
+#noidungtintuc {
+    margin-top: 10px;
+    height: 200px;
+}
+
+#duan-1,
+#duan-2,
+#tintuc-1,
+#tintuc-2 {
+    height: 80px;
+    border-bottom: 1px solid #a7a7a7;
+    margin-top: 5px;
+}
+
+#duan-1 a,
+#duan-2 a,
+#tintuc-1 a,
+#tintuc-2 a {
+    text-decoration: none;
+    color: #000000;
+}
+
+#duan-1 a:hover,
+#duan-2 a:hover,
+#tintuc-1 a:hover,
+#tintuc-2 a:hover {
+    color: #919191;
+}
+
+
+/* footer */
+
+.footer {
+    width: 1350px;
+    height: 300px;
+    background-color: #4d2f2a;
+    margin: auto;
+    margin-left: -130px;
+    margin-top: 30px;
+}
