--- a/css/datHang.css
+++ b/css/datHang.css
@@ -176,44 +176,137 @@
 }
 
 
-/* ---------------carousel------------------- */
+/* thong tin dặt hàng */
 
-#myCarousel {
-    margin-top: 50px;
+#back {
+    margin-left: 170px;
+    margin-top: 70px;
+    width: 250px;
+    height: 20px;
+    z-index: 999;
+    font-size: 20px;
 }
 
-carousel-inner img {
+#back a {
+    text-decoration: none;
+    color: #999898;
+}
+
+#back a:hover {
+    color: #000000;
+    font-weight: bold;
+}
+
+#tieudesp {
+    border-bottom: 2px solid #000000;
+}
+
+#giatien {
+    border-bottom: 1px solid #c6c6c6;
+}
+
+.text-center {
+    text-align: center;
+    margin: 20px auto;
+    font-size: 24px;
+}
+
+.form-control {
+    display: block;
     width: 100%;
-    height: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-
-/*  Sản phẩm */
-
-
-/* tiêu đề */
-
-#tieude {
-    text-transform: uppercase;
-    font-size: 15px;
-    margin-top: 20px;
-    margin: 20px auto auto auto;
-    width: 180px;
+a.fb-icon {
+    background: #3b5998;
 }
 
-#container-tieude {
-    width: 90%;
+a.tw-icon {
+    background: #1da1f2;
+}
+
+a.pin-icon {
+    background: #d02128;
+}
+
+a.tum-icon {
+    background: #001935;
+}
+
+.social-icons a {
+    float: left;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    margin: 3px;
+    color: #fff;
+}
+
+.danhgia {
+    position: relative;
     display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin: auto;
-    border-bottom: 3px solid #000000;
+    justify-content: space-between;
 }
 
+#thongtin {
+    background-color: #4a292d;
+    /* position: absolute; */
+    margin-left: -15px;
+    color: #f1f1f1;
+    font-size: 30px;
+    height: 50px;
+}
 
-/* hình ảnh */
+#nhanxet {
+    background-color: #4a292d;
+    /* position: absolute; */
+    margin-right: -15px;
+    color: #f1f1f1;
+    font-size: 30px;
+    height: 50px;
+}
 
-#hinhanhSPMoi {
+#xemthem {
+    background-color: #634c4f;
+    margin-bottom: 0px;
+    margin: auto;
+    color: #f1f1f1;
+    font-size: 30px;
+    height: 50px;
+}
+
+#thongtin p,
+#nhanxet p,
+#xemthem p,
+#splienquan p {
+    text-align: center;
+}
+
+#splienquan {
+    background-color: #4a292d;
+    /* position: absolute; */
+    margin: auto;
+    margin-top: 20px;
+    color: #f1f1f1;
+    font-size: 30px;
+    height: 50px;
+}
+
+#hinhanhSPlienquan {
     width: 90%;
     height: 100%;
     margin-top: 30px;
@@ -222,11 +315,11 @@ carousel-inner img {
     justify-content: space-evenly;
 }
 
-#hinhanhSPMoi a {
+#hinhanhSPlienquan a {
     text-decoration: none;
 }
 
-#SPMoi {
+#SPlienquan {
     margin-top: 10px;
     padding: 5px;
     border: 1px solid #a0a0a0;
@@ -238,7 +331,7 @@ carousel-inner img {
     align-items: center;
 }
 
-#tenSPMoi {
+#tenSPlienquan {
     font-size: 20px;
     text-transform: uppercase;
     font-weight: bold;
@@ -247,161 +340,11 @@ carousel-inner img {
     margin-top: 10px;
 }
 
-#giaSPMoi {
+#giaSPlienquan {
     font-size: 20px;
     text-transform: uppercase;
     font-weight: bold;
     color: #cc8181;
     text-align: center;
     margin-top: 10px;
-}
-
-
-/* sản phẩm phòng khách, PHÒNG NGỦ, PHÒNG BẾP   */
-
-
-/* tiêu đề */
-
-#tieudePhongKhach,
-#tieudePhongNgu,
-#tieudePhongBep {
-    width: 100%;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 3px solid #000000;
-    font-weight: bold;
-}
-
-#hinhanhSPPhongKhach,
-#hinhanhSPPhongNgu,
-#hinhanhSPPhongBep {
-    margin-top: -20px;
-}
-
-#loaiSP {
-    width: 30%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-right: -10px;
-    height: 30px;
-}
-
-#loaiSP a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 15px;
-    margin-right: 5px;
-    border-right: 1px solid #000000;
-    padding-right: 10px;
-}
-
-
-/* hình ảnh sản phẩm  */
-
-#SPPhongKhach-top,
-#SPPhongKhach-bottom,
-#SPPhongNgu-top,
-#SPPhongngu-bottom,
-#SPPhongBep-top,
-#SPPhongBep-bottom {
-    width: 100%;
-    height: 100%;
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-around;
-}
-
-#SPPhongKhach,
-#SPPhongngu,
-#SPPhongBep {
-    margin-top: 10px;
-    padding: 5px;
-    border: 1px solid #a0a0a0;
-    width: 260px;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-#SPPhongKhach a,
-#SPPhongngu a,
-#SPPhongBep a {
-    text-decoration: none;
-}
-
-#tenSPPhongKhach,
-#tenSPPhongngu,
-#tenSPPhongBep {
-    font-size: 12px;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #3c3c3c;
-    text-align: center;
-    margin-top: 10px;
-}
-
-#giaSPPhongKhach,
-#giaSPPhongngu,
-#giaSPPhongBep {
-    font-size: 15px;
-    font-weight: bold;
-    color: #cc8181;
-    text-align: center;
-    margin-top: 10px;
-}
-
-
-/* dự án tiêu biểu, tin tức */
-
-#duantieubieu,
-#tintuc {
-    height: 200px;
-    margin-top: 30px;
-}
-
-#duan,
-#noidungtintuc {
-    margin-top: 10px;
-    height: 200px;
-}
-
-#duan-1,
-#duan-2,
-#tintuc-1,
-#tintuc-2 {
-    height: 80px;
-    border-bottom: 1px solid #a7a7a7;
-    margin-top: 5px;
-}
-
-#duan-1 a,
-#duan-2 a,
-#tintuc-1 a,
-#tintuc-2 a {
-    text-decoration: none;
-    color: #000000;
-}
-
-#duan-1 a:hover,
-#duan-2 a:hover,
-#tintuc-1 a:hover,
-#tintuc-2 a:hover {
-    color: #919191;
-}
-
-
-/* footer */
-
-.footer {
-    width: 1350px;
-    height: 300px;
-    background-color: #4d2f2a;
-    margin: auto;
-    margin-left: -130px;
-    margin-top: 30px;
 }
